# jurassic_roar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
includes/: stringvector.h  tools.h
modules/: rexengine.animator.ixx  rexengine.collections.ixx  rexengine.console.ixx  rexengine.containers.ixx  rexengine.core.ixx  rexengine.effects.ixx  rexengine.gameloop.ixx  rexengine.properties.ixx  rexengine.resman.ixx  rexengine.sysmon.ixx  rexengine.ui.ixx  rexengine.viewport.ixx
res/img/: Sprite-0001.aseprite  bazooka.xcf  nedry_2912_1.xcf  nedry_2912_2.xcf  nedry_64_pixelart_ext.xcf  nedry_amélioré.xcf  nedry_amélioré_hd.xcf  nedry_detour.xcf  pixel-art-bazooka-pixelated-bazooka-bazooka-rpg-weapon-icons-background-pixelated-game_1038602-212.avif
sources/: main.cpp  rexengine.animator.cpp  rexengine.console.cpp  rexengine.containers.cpp  rexengine.effects.cpp  rexengine.properties.cpp  rexengine.resman.cpp  rexengine.sysmon.cpp  rexengine.ui.cpp  rexengine.viewport.cpp  stringvector.cpp  tools.cpp
